pagina de mesas y  clear sidebar
