# backend/src/orders/dto/create-table.dto.ts
@@ -1,0 +1,14 @@
+import { IsString, IsOptional, IsNumber } from 'class-validator';
+
+export class CreateTableDto {
+  @IsString()
+  label: string;
+
+  @IsNumber()
+  @IsOptional()
+  seats?: number;
+
+  @IsString()
+  @IsOptional()
+  zone?: string;
+}
